<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background">

    <!-- Opponent -->
    <LinearLayout
        android:id="@+id/opponentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/tvOpponent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/opponent"
            android:textSize="25sp"
            android:textColor="@color/opponent_color"/>

        <TextView
            android:id="@+id/tvCpScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cpu_score"
            android:layout_gravity="center_horizontal"
            android:textSize="13sp"/>

        <!-- opponents hand-->
        <ImageView
            android:id="@+id/ivOpponent"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/rock_image" />
    </LinearLayout>

    <!-- Versus -->
    <LinearLayout
        android:id="@+id/vsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/opponentLayout"
        android:layout_alignParentStart="true"
        android:gravity="center">

        <TextView
            android:id="@+id/tvVersus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vs"
            android:textSize="35sp"
            android:textStyle="italic" />
    </LinearLayout>

    <!-- User -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/vsLayout"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivUser"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/rock_image" />

        <TextView
            android:id="@+id/tvUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/you"
            android:textColor="@color/user_color"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tvUserScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_score"
            android:layout_gravity="center_horizontal"
            android:textSize="13sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
    android:gravity="center_horizontal"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/btnRock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/rock" />

        <Button
            android:id="@+id/btnPaper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/paper" />

        <Button
            android:id="@+id/btnScissors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/scissors" />
    </LinearLayout>
</RelativeLayout>