<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RulesActivity"
    android:background="@color/colorPrimaryDark"
    android:padding="10dp">

    <TextView
        android:id="@+id/etRules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="119dp"
        android:gravity="center_horizontal"
        android:text="@string/game_outcome"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvHowToWin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvGameRules"
        android:layout_centerHorizontal="true"
        android:text="@string/how_to_win"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tvGameRules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="138dp"
        android:gravity="center_horizontal"
        android:text="@string/game_rules"
        android:textSize="20sp" />


</RelativeLayout>